--- a/iOS Example/Podfile
+++ b/iOS Example/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+# platform :ios, '12.0'
 
 target 'iOS Example' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
@@ -8,7 +8,7 @@ target 'iOS Example' do
 
   # Pods for iOS Example
 
-  pod 'RxSwift'
+  pod 'RxSwift', '5.1.1'
   pod 'RxPhotos', :path => '../'
 
 end
